<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation ="vertical">

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAmount"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etAmount"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPeople"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etPeople"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tgSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tgBtnSVS"
            android:textOff="@string/tgBtnSVS"
            android:textOn="@string/tgBtnSVS" />

        <ToggleButton
            android:id="@+id/tgGst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tgBtnGST"
            android:textOff="@string/tgBtnGST"
            android:textOn="@string/tgBtnGST" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDiscount"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etDiscount"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBill"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvShowBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDivided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDivided"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvShowDivided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSplit" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnReset" />
    </LinearLayout>

</LinearLayout>